--- a/.html
+++ b/.html
@@ -1,10 +1,13 @@
-psychology-empresa de psicologia
+<h1>psychology-empresa de psicologia</h1>
 
-localizada em uma das cidades mais bonitas do paraná a empresa psychology traz para o mercado o que há de melhor 
+<p>localizada em uma das cidades mais bonitas do paraná a <strong>empresa psychology</strong> traz para o mercado o que há de melhor 
 para a cidade e para o seu psicológico.fundada em 2013, a empresa psychology já é destaque na cidade 
-e conquista cada vez mais pacientes.
+  e conquista cada vez mais pacientes.</p>
 
-nossa missão:"melhorar o psicológico das pessoas e fazer elas se sentirem bem com si mesma".
+<p><em>nossa missão:"melhorar o psicológico das pessoas e fazer elas se sentirem bem com si mesma".</p>
 
-oferecemos profissionais esperientes e qualificados para cuidar da sua saúde e do seu psicológico. O
-atendimento é feito com agilidade e com carinho, garantindo satisfação para nossos clientes.
+<p>oferecemos profissionais esperientes e qualificados para cuidar da sua saúde e do seu psicológico. O
+  atendimento é feito com agilidade e com carinho, garantindo satisfação para nossos clientes.</p>
+
+
+
