--- a/.html
+++ b/.html
@@ -4,10 +4,11 @@
 para a cidade e para o seu psicológico.fundada em 2013, a empresa psychology já é destaque na cidade 
   e conquista cada vez mais pacientes.</p>
 
-<p><em>nossa missão:"melhorar o psicológico das pessoas e fazer elas se sentirem bem com si mesma".</p>
+<p><em>nossa missão:"melhorar o psicológico das pessoas e fazer elas se sentirem bem com si mesma".<..em>/p>
 
 <p>oferecemos profissionais esperientes e qualificados para cuidar da sua saúde e do seu psicológico. O
   atendimento é feito com agilidade e com carinho, garantindo satisfação para nossos clientes.</p>
 
 
 
+ 950080
