--- a/.html
+++ b/.html
@@ -1,14 +1,23 @@
-<h1>psychology-empresa de psicologia</h1>
+<!Doctype html>
+<html lang="pt-br">
+  <head>
+      <meta charset="utf-8>
+      <title>psychology-empresa de psicologia</title>
+  </head>
+                     
+<body>                     
+<h1 style="text-align: center">sobre a psychology-empresa de psicologia</h1>
 
-<p>localizada em uma das cidades mais bonitas do paraná a <strong>empresa psychology</strong> traz para o mercado o que há de melhor 
+<p style="text-align: center>localizada em uma das cidades mais bonitas do paraná a <strong>empresa psychology</strong> traz para o mercado o que há de melhor 
 para a cidade e para o seu psicológico.fundada em 2013, a empresa psychology já é destaque na cidade 
   e conquista cada vez mais pacientes.</p>
 
-<p><em>nossa missão:"melhorar o psicológico das pessoas e fazer elas se sentirem bem com si mesma".<..em>/p>
+<p style"font-size: 20px"><em>nossa missão:"melhorar o psicológico das pessoas e fazer elas se sentirem bem com si mesma".<..em>/p>
 
 <p>oferecemos profissionais esperientes e qualificados para cuidar da sua saúde e do seu psicológico. O
   atendimento é feito com agilidade e com carinho, garantindo satisfação para nossos clientes.</p>
-
+   </body>
+</html>                                                                                                 
 
 
  
