--- a/.html
+++ b/.html
@@ -3,6 +3,11 @@
   <head>
       <meta charset="utf-8>
       <title>psychology-empresa de psicologia</title>
+      <link rel="stylesheet" href="style.css">
+  
+  <style> 
+  
+    </style 
   </head>
                      
 <body>                     
