--- a/.html
+++ b/.html
@@ -11,13 +11,15 @@
   </head>
                      
 <body>                     
+ <img id="banner" src="banner.jpg>
+
 <h> sobre a psychology-empresa de psicologia</h1>
 
 <p style="text-align: center>localizada em uma das cidades mais bonitas do paraná a <strong>empresa psychology</strong> traz para o mercado o que há de melhor 
 para a cidade e para o seu psicológico.fundada em 2013, a empresa psychology já é destaque na cidade 
   e conquista cada vez mais pacientes.</p>
 
-<p style"font-size: 20px"><em>nossa missão:"melhorar o psicológico das pessoas e fazer elas se sentirem bem com si mesma".<..em>/p>
+<p id="missão" style"font-size: 20px"><em>nossa missão:"melhorar o psicológico das pessoas e fazer elas se sentirem bem com si mesma".<..em>/p>
 
 <p>oferecemos profissionais esperientes e qualificados para cuidar da sua saúde e do seu psicológico. O
   atendimento é feito com agilidade e com carinho, garantindo satisfação para nossos clientes.</p>
@@ -69,12 +71,19 @@ rgb(0,0,255)
       backgroud: #cccccc
   }
   
-  h1 {
+  #banner {
+      width: 100%;                                                                                                                                 
+  
+                                                                                                                                     h1 {
    text-align:center;
   }
+ 
   p { 
-    text-align:center;
+    text-align:center;  
+  }
   
+  #missão {
+       font-size: 20px
   }
   
   em strong { 
